# CPU_Usage_Tracker

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: main.c  main.h  readCpuStats.c
tests/: test.c
